# 1bitshit_cli-bkg

./: Cargo.toml  README.md
assets/: THIRD_PARTY_NOTICES.txt
cmd/: Cargo.toml  ReadMe.md  build.rs
cmd/assets/: commands.json
cmd/src/: README.md  main.rs  theme.rs
cmd/src/assets/: branding.rs
cmd/src/assets/logos/: logo_gallery.rs
cmd/src/cli/: benchmark.rs  booster.rs  component.rs  config_cmd.rs  help.rs  ingest.rs  list.rs  ps.rs  pull.rs  rm.rs  run.rs  setup.rs  test_jit.rs
cmd/src/core/: app.rs  bootstrapper.rs  dashboard.rs  flow.rs  state.rs
cmd/src/core/commands/: registry.rs
cmd/src/ui/: menu.rs
cmd/src/ui/apps/chat/: ui_stream.rs
cmd/src/ui/apps/help/: mod.rs
cmd/src/ui/apps/menu/: mod.rs
cmd/src/ui/apps/registry/: mod.rs  table.rs
cmd/src/ui/apps/settings/: hardware.rs
cmd/src/ui/components/: text_paste.rs
